# Sentinal

./: .env.example  .gitignore  .npmrc  Anchor.toml  CHANGELOG.md  CLAUDE.md  Implementation.md  Plan.md  README.md  RESOURCES.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.tests.json
app/: next.config.mjs  package.json  tsconfig.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/api/agent-spend/: route.ts
app/app/api/balance/: route.ts
app/app/api/escalations/: route.ts
app/app/components/: agent-spend-chart.tsx  approval-modal.tsx  balance-widget.tsx  escalation-approver.tsx  escalation-queue.tsx  live-activity.tsx  policy-editor.tsx  wallet-controls.tsx  wallet-provider.tsx
app/lib/: balance.ts  db.ts  env.ts  helius.test.ts  helius.ts  policy.ts  rpc.ts  sim.ts  spend.ts
docs/: TRUST_MODEL.md  demo-script.md  helius-payload.md  learnings.md  policy-context-shape.md  pyth-response.md  sim-response.md  threat-model.md
docs/adr/: 0001-on-chain-root-invariant.md  0002-rule-precedence.md  0003-pyth-pull-not-push.md  0004-helius-over-dune-for-events.md  0005-sqlite-for-escalations.md
docs/architecture/: domains.md
examples/embed/: README.md  evaluate.ts
examples/policies/: medium.yml  small.yml  strict.yml
programs/sentinel-registry/: Cargo.toml
programs/sentinel-registry/src/: lib.rs
scripts/: seed-demo.ts
scripts/probes/: balance-spend.ts  check-webhook.ts  deploy.sh  fire-register-policy.ts  helius.ts  load-env.ts  pyth.ts  restart-a2.sh  shutdown-a2.sh  sim.ts  x402-live.ts  zerion.mjs
tests/: sentinel-registry.ts
(+3 files in other folders)
